  already exceeds the cutoff bound
- improved performance of method SCIPsolRetransform() when called during presolving with many aggregations
- minor presolving performance improvements in cons_logicor.c and cons_knapsack.c
- added upgradability for implicit binary variable cases for linear constraints
- improved performance of SCIPcliquelistDel(), SCIPcliquetableAdd(), SCIPcliquetableCleanup()

interface
- SCIPgetLPBranchCands() can be used to retrieve the number of implicit integer variables with fractional LP solution
  value via an additional pointer; the corresponding implicit integer variables can be accessed together with their 
  fractionalities and solution values in the same way as binary and integer variables before; the arrays are sorted such 
  that binary and integer variables precede the implicit integer variables; the method SCIPbranchcandGetLPCands()
  has been modified in the same way   
- SCIPcalcMIR() gets an additional parameter "cutrank" which returns the rank of the aggregation; via SCIProwChgRank()
  the rank of a cut can be changed (default rank is 0)
- new methods for the SCIP_QUEUE data structure in pub_misc.h, misc.c SCIPqueueCreate(), SCIPqueueFree(),
  SCIPqueueClear(), SCIPqueueInsert(), SCIPqueueRemove(), SCIPqueueFirst(), SCIPqueueIsEmpty(), SCIPqueueNElems()
- added number of constraints which are marked for propagation to callback method consprop
- SCIPcalcMIR() takes an additional parameter sidetypes to determine which side of the rows to use
  (relevant for ranged rows)
- New methods SCIPconshdlrIncNCutsFound(), SCIPsepaIncNCutsFound(), and SCIPsepaIncNCutsFoundAtNode() to increase the
  number of found cuts
- added function SCIPgetFirstLPTime to return the time needed to solve the first LP of the root node
- added SCIPshrinkDisjunctiveVarSet(), which takes an set of variables with corresponding bounds and boundtypes, and